# ct

./: .gitignore  README.md  setup.cfg  setup.py
lib/: Makefile  device_ptr.h  fbp.cpp  iradonT.cu  iradonT.h  meanshift.cpp  misc.cpp  misc.h
scripts/: .rotation-center.swp  mean  mean.py  recon  recon.py  rotation-center  z-project
src/: fbp.py
src/fbp/: __init__.py  util.py
tests/: sinogram.tif  test_fbp.py
