[metadata]
name = ct
version = attr: src.VERSION
description = Implements of reconstruction algorithms for computed tomography (CT)
long_description = file: README.md
url = https://github.com/kshkss/ctypes-freeimage
author = Akishika Issui
license = FreeImage Public License (FIPL)
keywords = ct
classifiers =
        Development Status :: 3 - Alpha
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7

[options]
package_dir =
  =src
packages = file:

[options.packages.find]
where = src

