[metadata]
name = ct
version = attr: fbp.__version__
description = Implements of reconstruction algorithms for computed tomography (CT)
long_description = file: README.md
url = https://github.com/kshkss/ctypes-freeimage
author = Akishika Issui
license = GNU GENERAL PUBLIC LICENSE Version 3 (GPLv3)
keywords = ct
classifiers =
        Development Status :: 3 - Alpha
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7

